package br.edu.pucminas.biblioteca.modelo;

public enum ECategoria {
    literatura,
    tecnico,
    periodico
}
