package br.edu.pucminas.biblioteca.modelo;

public enum EFormato {
    PDF,
    EPUB
}
