package br.edu.pucminas.biblioteca.modelo;

public enum ETipo {
    LIVRE,
    OBRIGATORIO
}
