package br.edu.pucminas.biblioteca.modelo;

import java.time.LocalDateTime;

public class SistemaDeEstatisticas {

    // HU14
    public void notificar(Ebook ebook, Aluno aluno, LocalDateTime dataHora) {
        // TODO: implementar na Sprint 3
    }
}
